# hand-challenge

./: pyproject.toml  script.py
