[tool.poetry]
name = "hand-challenge"
version = "0.1.0"
description = ""
authors = ["Javier Ocampo <ferroxido@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
emoji = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
